--- a/src/components/ProjectSection.astro
+++ b/src/components/ProjectSection.astro
@@ -13,5 +13,5 @@ import DiagonalCarousel from './react/DiagonalCarousel.tsx';
       <h2 class="text-4xl font-semibold mb-10 sm:mb-24 text-label-primary text-center">My Projects</h2>
   </div>
   
-  <DiagonalCarousel client:load projects={projectsData} />
+  <DiagonalCarousel client:visible projects={projectsData} />
 </section>
