Added MAA project

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,6 +1,6 @@
 ---
 // src/components/ProjectCard.astro
-import TechnologyIcon from './TechnologyIcon.astro';
+import TechnologyIcon from '~/components/TechnologyIcon.astro';
 import type { Props as TechnologyIconProps } from './TechnologyIcon.astro';
 
 interface Props {
